Adjust checkbox max width to prevent overflow scrolling in flex width100% scenarios

--- a/packages/@adobe/spectrum-css-temp/components/checkbox/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/checkbox/index.css
@@ -30,7 +30,8 @@ governing permissions and limitations under the License.
   position: relative;
 
   min-block-size: var(--spectrum-checkbox-height);
-  max-inline-size: 100%;
+  /* Accommodates for right padding in case width: 100% is applied to the Checkbox directly. */
+  max-inline-size: calc(100% - var(--spectrum-checkbox-cursor-hit-x) * 2);
 
   margin-inline-end: calc(var(--spectrum-checkbox-cursor-hit-x) * 2);
 
@@ -59,7 +60,7 @@ governing permissions and limitations under the License.
   position: absolute;
   inset-block-start: 0;
   inset-inline-start: calc(var(--spectrum-checkbox-cursor-hit-x) * -1);
-  inline-size: calc(100% + var(--spectrum-checkbox-cursor-hit-x) * 2);
+  inline-size: calc(100% + var(--spectrum-checkbox-cursor-hit-x) * 3);
   block-size: 100%;
 
   opacity: .0001;
